# fastapi-mongodb

./: .env.example  Dockerfile  Dockerfile.ora  DockerfileOracleLinux  LICENSE  Makefile  Pipfile  README.md  application.py  captain-definition  compose-oracle.yml  compose.yml  create-db-template.sql  docker-compose.yml  local.Dockerfile  log-conf.yaml  pyproject.tbd  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml
app_name/: config.py  main.py  utils.py
app_name/routers/: __init__.py  exceptions.py
app_name/routers/v1/: usuarios.py  vegs.py
app_name/schemas/: usuarios.py
app_name/services/: repository.py
greens/: config.py  main.py  utils.py
greens/routers/: __init__.py  api.py  exceptions.py
greens/routers/v1/: vegs.py
greens/schemas/: vegs.py
greens/services/: repository.py
tests/: conftest.py  test_routers.py  test_schemas.py  test_vegs_api.py
