[tool.poetry]
name = "fastapi-mongodb"
version = "0.4.0"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"
packages = [{ include = "fastapi_mongodb" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = { version = "2.6.4", extras = ["email"] }
pydantic-settings = "2.2.1"
motor = "^3.4.0"
uvicorn = { version = "0.29.0", extras = ["standard"] }
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
rich = "^13.7.1"
uvloop = "^0.19.0"
httptools = "^0.6.1"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

lint.select = ["E", "F", "UP", "N", "C", "B"]
lint.ignore = ["E501"]

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends",]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --doctest-glob=*.md --cov=. --cov-report html:htmlcov --cov-report=term-missing"
asyncio_mode = "strict"
env_files = [".env"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"